--- a/app/src/main/res/drawable/instagram_bg.xml
+++ b/app/src/main/res/drawable/instagram_bg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/red" /> <!-- Sky blue color -->
+    <solid android:color="@color/insta_pink" /> <!-- Sky blue color -->
     <corners android:radius="12dp" /> <!-- Rounded corners, adjust the radius as needed -->
-    <stroke android:color="#FFFFFF" android:width="4dp" /> <!-- White border, adjust color and width as needed -->
+    <stroke android:color="#FFFFFF" android:width="3dp" /> <!-- White border, adjust color and width as needed -->
 </shape>
 
 
