--- a/app/src/main/res/layout/custom_dialog_layout.xml
+++ b/app/src/main/res/layout/custom_dialog_layout.xml
@@ -1,51 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/ic_launcher_background"
-
-
->
-
-
+    >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
         android:layout_margin="20dp"
-        android:orientation="horizontal"
+        android:background="@drawable/custom_bkg"
         android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/custom_bkg"
         app:layout_constraintVertical_bias="0.5">
 
 
-        <ImageView
-            android:id="@+id/volume_iv"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/refresh_background"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:src="@drawable/baseline_volume_up_24" />
+        <SeekBar
+            android:id="@+id/seekBar2"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+        android:layout_marginHorizontal="24dp"
+
+        android:thumb="@drawable/custom_seekbar_thumb"
+        />
+
+        <!--        android:progressDrawable="@drawable/custom_seekbar_progress"-->
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/volume_iv"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@drawable/refresh_background"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:src="@drawable/baseline_volume_up_24" />
 
 
-        <ImageView
-            android:id="@+id/vibrate_iv"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/phone_background"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:src="@drawable/baseline_phone_android_24" />
+    <ImageView
+        android:id="@+id/vibrate_iv"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+
+        android:background="@drawable/phone_background"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:src="@drawable/baseline_phone_android_24" />
+
+
+</LinearLayout>
+
+
 
 
     </LinearLayout>
@@ -67,79 +84,3 @@
         app:srcCompat="@drawable/baseline_close_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:id="@+id/successConstraintLayout"-->
-<!--    android:orientation="vertical"-->
-<!--    android:layout_width="300dp"-->
-<!--    android:background="@drawable/dialogbg"-->
-<!--    android:layout_height="wrap_content">-->
-<!--&lt;!&ndash;    &ndash;&gt;-->
-
-
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/layoutDialog"-->
-<!--        android:layout_width="300dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@drawable/custom_bkg"-->
-<!--        app:layout_constaintStart_toStartOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent">-->
-
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="298dp"-->
-<!--            android:layout_height="68dp"-->
-<!--            android:layout_margin="20dp"-->
-<!--            android:orientation="horizontal"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent">-->
-
-
-<!--            <ImageView-->
-<!--                android:id="@+id/volume_iv"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/refresh_background"-->
-<!--                android:paddingTop="4dp"-->
-<!--                android:paddingBottom="4dp"-->
-<!--                android:src="@drawable/baseline_volume_up_24" />-->
-
-
-<!--            <ImageView-->
-<!--                android:id="@+id/vibrate_iv"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/phone_background"-->
-<!--                android:paddingTop="4dp"-->
-<!--                android:paddingBottom="4dp"-->
-<!--                android:src="@drawable/baseline_phone_android_24" />-->
-
-
-<!--        </LinearLayout>-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/close_dialog_iv"-->
-<!--            android:layout_width="53dp"-->
-<!--            android:layout_height="24dp"-->
-<!--            android:layout_gravity="right"-->
-<!--            android:layout_marginBottom="88dp"-->
-<!--            android:background="@drawable/restart_background"-->
-<!--            app:layout_constraintBaseline_toTopOf="@id/layoutDialog"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintHorizontal_bias="1.0"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:srcCompat="@drawable/baseline_close_24" />-->
-
-
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-<!--    -->
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
