--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#E80C0C</color>
+    <color name="insta_pink">#d62976</color>
     <color name="yellow">#CBBF50</color>
     <color name="red_obesity">#65E80C0C</color>
     <color name="grey">#48BBB4B7</color>
